--- a/WEB/Easy/4. Jr.Inspector/Source Code/docker-compose.yaml
+++ b/WEB/Easy/4. Jr.Inspector/Source Code/docker-compose.yaml
@@ -3,13 +3,14 @@ version: "3"
 
 services:
   
-  new-easy:
-    container_name: after-easy
-    image: after
+  peasy:
+    container_name: easy
+    image: q4-i
     build: .
     ports:
-      - 8300:80
+      - 8330:80
     restart: always
 
     volumes:
       - ./src:/var/www/html
+
